--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "friendfinder",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "/app/routing/htmlRoutes.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node htmlRoutes.js"
   },
   "author": "Jaspinder Singh",
   "license": "ISC",
